[gd_scene load_steps=50 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://sprite/help1.png" type="Texture" id=2]
[ext_resource path="res://Fonts/BD_Cartoon_Shout.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Melee.gd" type="Script" id=5]
[ext_resource path="res://sprite/sword(1).png" type="Texture" id=6]
[ext_resource path="res://Magic.gd" type="Script" id=7]
[ext_resource path="res://sprite/magic-wand.png" type="Texture" id=8]
[ext_resource path="res://Wait.gd" type="Script" id=9]
[ext_resource path="res://sprite/watch.png" type="Texture" id=10]
[ext_resource path="res://sprite/hit - yellow.png" type="Texture" id=11]
[ext_resource path="res://sprite/01/ded.png" type="Texture" id=12]
[ext_resource path="res://sprite/heal/1/01.png" type="Texture" id=13]
[ext_resource path="res://sprite/heal/1/02.png" type="Texture" id=14]
[ext_resource path="res://sprite/heal/1/03.png" type="Texture" id=15]
[ext_resource path="res://sprite/heal/1/04.png" type="Texture" id=16]
[ext_resource path="res://sprite/heal/1/05.png" type="Texture" id=17]
[ext_resource path="res://Sounds/Hit_Hurt11.wav" type="AudioStream" id=18]
[ext_resource path="res://Loadindex.gd" type="Script" id=19]
[ext_resource path="res://Fonts/theboldfont.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://Enemy.gd" type="Script" id=21]
[ext_resource path="res://sprite/faya ss.png" type="Texture" id=22]
[ext_resource path="res://sprite/freeze.png" type="Texture" id=23]
[ext_resource path="res://sprite/02/Water__01.png" type="Texture" id=24]
[ext_resource path="res://sprite/02/Water__02.png" type="Texture" id=25]
[ext_resource path="res://sprite/02/Water__03.png" type="Texture" id=26]
[ext_resource path="res://sprite/02/Water__04.png" type="Texture" id=27]
[ext_resource path="res://sprite/02/Water__05.png" type="Texture" id=28]
[ext_resource path="res://sprite/01/Water__01.png" type="Texture" id=29]
[ext_resource path="res://Video/YOU-DIED-HD.ogv" type="VideoStream" id=30]
[ext_resource path="res://Music/10convert.com_Dr-Mario-NES-Music-Versus-Victory_A8YIatTP6jc.ogg" type="AudioStream" id=31]
[ext_resource path="res://sprite/bg/bg_0031_1_000.png" type="Texture" id=32]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 75.2941, 75.2941 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0862745, 0.137255, 0.223529, 1 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32, 32 )

[sub_resource type="Animation" id=6]
resource_name = "Heal"
length = 0.85
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AntiOuch:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2, 0.3, 0.4, 0.65, 0.7, 0.75, 0.8, 0.85 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 12 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Ouch:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 15, 1 ]
}

[sub_resource type="DynamicFont" id=8]
size = 68
font_data = ExtResource( 20 )

[sub_resource type="Animation" id=9]
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Fire ouch:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 1, 2, 3, 4, 5, 6, 7, 8, 9, 9, 10, 11, 19 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Ice"
tracks/0/type = "value"
tracks/0/path = NodePath("Ice Ouch:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 7, 6, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ice Ouch:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 12 ), ExtResource( 23 ), ExtResource( 12 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Water ouch:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ ExtResource( 12 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 29 ), ExtResource( 12 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Ouch:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 15, 1 ]
}

[sub_resource type="DynamicFont" id=13]
size = 50
outline_size = 3
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=14]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=15]
size = 40
font_data = ExtResource( 20 )

[sub_resource type="Shader" id=16]
code = "shader_type canvas_item;
uniform float scroll_speed;
void fragment() {
	vec2 shifteduv = UV;
	shifteduv.x += TIME * scroll_speed;
	vec4 col = texture(TEXTURE,shifteduv);
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=17]
shader = SubResource( 16 )
shader_param/scroll_speed = 0.01

[node name="Fight" type="Node2D"]

[node name="Player" type="Node2D" parent="."]
position = Vector2( 64, 544 )
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="IconS" type="Sprite" parent="Player"]
position = Vector2( 0, -3 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 2 )

[node name="Labels" type="Node" parent="Player"]

[node name="Name" type="Label" parent="Player/Labels"]
margin_left = 128.0
margin_top = 480.0
margin_right = 215.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( 24.4148, 6.85336 )
custom_fonts/font = SubResource( 1 )
text = "Name"

[node name="HP" type="Label" parent="Player/Labels"]
margin_left = 128.0
margin_top = 512.0
margin_right = 224.0
margin_bottom = 544.0
rect_pivot_offset = Vector2( 24.4148, 6.85336 )
custom_fonts/font = SubResource( 1 )
text = "HP"

[node name="Mana" type="Label" parent="Player/Labels"]
margin_left = 128.0
margin_top = 544.0
margin_right = 215.0
margin_bottom = 563.0
rect_pivot_offset = Vector2( 24.4148, 6.85336 )
custom_fonts/font = SubResource( 1 )
text = "MP"

[node name="ui" type="Sprite" parent="Player"]
modulate = Color( 0, 0, 0, 0.333333 )
show_behind_parent = true
position = Vector2( 224, -3 )
scale = Vector2( 8, 1 )
texture = ExtResource( 4 )

[node name="Melee" type="Area2D" parent="Player"]
position = Vector2( 176, -3 )
script = ExtResource( 5 )

[node name="melee" type="Sprite" parent="Player/Melee"]
scale = Vector2( 0.425, 0.425 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Melee"]
scale = Vector2( 0.425, 0.425 )
shape = SubResource( 2 )

[node name="labelss" type="Node" parent="Player/Melee"]

[node name="labels" type="Node2D" parent="Player/Melee/labelss"]
position = Vector2( 416, 538 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Player/Melee/labelss/labels"]
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = -29.0
custom_fonts/font = SubResource( 3 )

[node name="Move1" type="Button" parent="Player/Melee/labelss/labels/Label"]
modulate = Color( 0.0980392, 0.137255, 0.207843, 0.501961 )
show_behind_parent = true
margin_right = 128.0
margin_bottom = 32.0
custom_styles/hover = SubResource( 4 )

[node name="CLabel" type="Label" parent="Player/Melee/labelss/labels/Label"]
margin_left = -20.0
margin_right = 108.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 3 )

[node name="Label2" type="Label" parent="Player/Melee/labelss/labels"]
margin_left = -64.0
margin_top = -32.0
margin_right = 64.0
margin_bottom = 3.0
custom_fonts/font = SubResource( 3 )

[node name="Move2" type="Button" parent="Player/Melee/labelss/labels/Label2"]
modulate = Color( 0.0980392, 0.137255, 0.207843, 0.501961 )
show_behind_parent = true
margin_right = 128.0
margin_bottom = 32.0
custom_styles/hover = SubResource( 4 )

[node name="CLabel2" type="Label" parent="Player/Melee/labelss/labels/Label2"]
margin_left = -20.0
margin_right = 108.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 3 )

[node name="Label3" type="Label" parent="Player/Melee/labelss/labels"]
margin_left = -64.0
margin_right = 64.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 3 )

[node name="Move3" type="Button" parent="Player/Melee/labelss/labels/Label3"]
modulate = Color( 0.0980392, 0.137255, 0.207843, 0.501961 )
show_behind_parent = true
margin_right = 128.0
margin_bottom = 32.0
custom_styles/hover = SubResource( 4 )

[node name="CLabel3" type="Label" parent="Player/Melee/labelss/labels/Label3"]
margin_left = -20.0
margin_right = 108.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 3 )

[node name="Label4" type="Label" parent="Player/Melee/labelss/labels"]
margin_left = -64.0
margin_top = 30.0
margin_right = 64.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 3 )

[node name="Move4" type="Button" parent="Player/Melee/labelss/labels/Label4"]
modulate = Color( 0.0980392, 0.137255, 0.207843, 0.501961 )
show_behind_parent = true
margin_top = 2.0
margin_right = 128.0
margin_bottom = 34.0
custom_styles/hover = SubResource( 4 )

[node name="CLabel4" type="Label" parent="Player/Melee/labelss/labels/Label4"]
margin_left = -20.0
margin_right = 108.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 3 )

[node name="Magic" type="Area2D" parent="Player"]
position = Vector2( 272, -3 )
script = ExtResource( 7 )

[node name="magic" type="Sprite" parent="Player/Magic"]
scale = Vector2( 0.425, 0.425 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Magic"]
scale = Vector2( 0.425, 0.425 )
shape = SubResource( 2 )

[node name="labelss" type="Node" parent="Player/Magic"]

[node name="labels" type="Node2D" parent="Player/Magic/labelss"]
position = Vector2( 608, 538 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Player/Magic/labelss/labels"]
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = -29.0
custom_fonts/font = SubResource( 3 )

[node name="Move1" type="Button" parent="Player/Magic/labelss/labels/Label"]
modulate = Color( 0.0980392, 0.137255, 0.207843, 0.501961 )
show_behind_parent = true
margin_right = 128.0
margin_bottom = 32.0
custom_styles/hover = SubResource( 4 )

[node name="MLabel" type="Label" parent="Player/Magic/labelss/labels/Label"]
margin_left = -20.0
margin_right = 108.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.658824, 0.117647, 0.117647, 1 )

[node name="Label2" type="Label" parent="Player/Magic/labelss/labels"]
margin_left = -64.0
margin_top = -32.0
margin_right = 64.0
margin_bottom = 3.0
custom_fonts/font = SubResource( 3 )

[node name="Move2" type="Button" parent="Player/Magic/labelss/labels/Label2"]
modulate = Color( 0.0980392, 0.137255, 0.207843, 0.501961 )
show_behind_parent = true
margin_right = 128.0
margin_bottom = 32.0
custom_styles/hover = SubResource( 4 )

[node name="MLabel2" type="Label" parent="Player/Magic/labelss/labels/Label2"]
margin_left = -20.0
margin_right = 108.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.215686, 0.784314, 1, 1 )

[node name="Label3" type="Label" parent="Player/Magic/labelss/labels"]
margin_left = -64.0
margin_right = 64.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 3 )

[node name="Move3" type="Button" parent="Player/Magic/labelss/labels/Label3"]
modulate = Color( 0.0980392, 0.137255, 0.207843, 0.501961 )
show_behind_parent = true
margin_right = 128.0
margin_bottom = 32.0
custom_styles/hover = SubResource( 4 )

[node name="MLabel3" type="Label" parent="Player/Magic/labelss/labels/Label3"]
margin_left = -20.0
margin_right = 108.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.215686, 0.784314, 1, 1 )

[node name="Label4" type="Label" parent="Player/Magic/labelss/labels"]
margin_left = -64.0
margin_top = 30.0
margin_right = 64.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 3 )

[node name="Move4" type="Button" parent="Player/Magic/labelss/labels/Label4"]
modulate = Color( 0.0980392, 0.137255, 0.207843, 0.501961 )
show_behind_parent = true
margin_top = 2.0
margin_right = 128.0
margin_bottom = 34.0
custom_styles/hover = SubResource( 4 )

[node name="MLabel4" type="Label" parent="Player/Magic/labelss/labels/Label4"]
margin_left = -20.0
margin_right = 108.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.215686, 0.784314, 1, 1 )

[node name="Wait" type="Area2D" parent="Player"]
position = Vector2( 368, -3 )
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="Player/Wait"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Wait"]
shape = SubResource( 5 )

[node name="Ouch" type="Sprite" parent="Player"]
texture = ExtResource( 11 )
vframes = 4
hframes = 4
frame = 1

[node name="AntiOuch" type="Sprite" parent="Player"]
texture = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
anims/Heal = SubResource( 6 )
anims/hit = SubResource( 7 )

[node name="Audio" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 18 )

[node name="Loadindex" type="Node" parent="Player"]
script = ExtResource( 19 )

[node name="WIN" type="Label" parent="Player"]
visible = false
margin_left = 80.0
margin_top = -160.0
margin_right = 373.0
margin_bottom = -90.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.00392157, 0.701961, 0, 1 )
text = "IT DED BOI"

[node name="Enemy" type="Node2D" parent="."]
position = Vector2( 960, 64 )
scale = Vector2( 2, 2 )
script = ExtResource( 21 )

[node name="IconS" type="Sprite" parent="Enemy"]
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 2 )

[node name="Labels" type="Node" parent="Enemy"]

[node name="Name" type="Label" parent="Enemy/Labels"]
margin_left = 704.0
margin_right = 864.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 24.4148, 6.85336 )
custom_fonts/font = SubResource( 1 )
text = "Name"

[node name="HP" type="Label" parent="Enemy/Labels"]
margin_left = 704.0
margin_top = 32.0
margin_right = 896.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 24.4148, 6.85336 )
custom_fonts/font = SubResource( 1 )
text = "HP:100/100"

[node name="Mana" type="Label" parent="Enemy/Labels"]
margin_left = 704.0
margin_top = 64.0
margin_right = 896.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 24.4148, 6.85336 )
custom_fonts/font = SubResource( 1 )
text = "MP:10/10"

[node name="ui" type="Sprite" parent="Enemy"]
modulate = Color( 0, 0, 0, 0.333333 )
show_behind_parent = true
position = Vector2( -223.417, 0 )
scale = Vector2( 8, 1 )
texture = ExtResource( 4 )

[node name="Ouch" type="Sprite" parent="Enemy"]
texture = ExtResource( 11 )
vframes = 4
hframes = 4

[node name="Fire ouch" type="Sprite" parent="Enemy"]
position = Vector2( 0, -64 )
texture = ExtResource( 22 )
vframes = 4
hframes = 5
frame = 19

[node name="Water ouch" type="Sprite" parent="Enemy"]
texture = ExtResource( 12 )

[node name="Ice Ouch" type="Sprite" parent="Enemy"]
position = Vector2( -3.09512, 6.57715 )
scale = Vector2( 1.18136, 1.18136 )
texture = ExtResource( 12 )
vframes = 6
hframes = 4
frame = 4
region_rect = Rect2( 0, 0, 100, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Enemy"]
anims/Fire = SubResource( 9 )
anims/Ice = SubResource( 10 )
anims/Water = SubResource( 11 )
anims/hit = SubResource( 12 )

[node name="end" type="Node2D" parent="."]
visible = false
z_index = 5

[node name="winnerl" type="Label" parent="end"]
margin_left = 63.625
margin_top = 353.0
margin_right = 296.625
margin_bottom = 410.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.470588, 0.835294, 0.223529, 1 )
text = "Name"

[node name="winner" type="Sprite" parent="end"]
modulate = Color( 0, 0, 0, 0.65098 )
position = Vector2( 524, 474 )
scale = Vector2( 2.125, 0.699219 )
z_index = -1
texture = ExtResource( 2 )

[node name="loserl" type="Label" parent="end"]
margin_left = 64.0
margin_top = 5.0
margin_right = 297.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.807843, 0.0235294, 0.0235294, 1 )
text = "Name"

[node name="loser" type="Sprite" parent="end"]
modulate = Color( 0, 0, 0, 0.65 )
position = Vector2( 524, 128 )
scale = Vector2( 2.125, 0.699219 )
z_index = -1
texture = ExtResource( 2 )

[node name="winnertext" type="RichTextLabel" parent="end"]
margin_left = 64.0
margin_top = 416.0
margin_right = 736.0
margin_bottom = 603.0
custom_fonts/normal_font = SubResource( 14 )
text = "fuck you loooser"

[node name="losertext" type="RichTextLabel" parent="end"]
margin_left = 64.0
margin_top = 64.0
margin_right = 704.0
margin_bottom = 251.0
custom_fonts/normal_font = SubResource( 14 )
text = "fuck you wiiinner"

[node name="buttons" type="Node2D" parent="end"]
visible = false

[node name="Button" type="Button" parent="end/buttons"]
margin_left = 64.0
margin_top = 256.0
margin_right = 288.0
margin_bottom = 338.0
custom_fonts/font = SubResource( 15 )
text = "REPLAY"

[node name="Button2" type="Button" parent="end/buttons"]
margin_left = 320.0
margin_top = 256.0
margin_right = 688.0
margin_bottom = 337.0
custom_fonts/font = SubResource( 15 )
text = "Character SELECT"

[node name="Button3" type="Button" parent="end/buttons"]
margin_left = 729.988
margin_top = 253.667
margin_right = 953.988
margin_bottom = 335.667
custom_fonts/font = SubResource( 15 )
text = "Menu"

[node name="VideoPlayer" type="VideoPlayer" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 602.0
stream = ExtResource( 30 )

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 31 )

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
material = SubResource( 17 )
margin_left = -536.684
margin_top = -236.102
margin_right = 1413.32
margin_bottom = 739.898
mouse_filter = 2
texture = ExtResource( 32 )
expand = true
stretch_mode = 2
[connection signal="mouse_exited" from="Player/Melee" to="Player/Melee" method="_on_Melee_mouse_exited"]
[connection signal="mouse_exited" from="Player/Magic" to="Player/Magic" method="_on_Magic_mouse_exited"]
[connection signal="pressed" from="end/buttons/Button" to="Player" method="_on_Replay_pressed"]
[connection signal="pressed" from="end/buttons/Button2" to="Player" method="_on_char_pressed"]
[connection signal="pressed" from="end/buttons/Button3" to="Player" method="_on_menu_pressed"]
